Adicionando game over

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="app/states/preload.js"></script>
     <script src="app/states/menu.js"></script>
     <script src="app/states/playGame.js"></script>
+    <script src="app/states/gameOver.js"></script>
 
     <script src="app/components/map.js"></script>
     <script src="app/components/player.js"></script>
