Inserindo botões na tela

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="app/states/playGame.js"></script>
     <script src="app/states/gameOver.js"></script>
 
+    <script src="app/components/gamepad.js"></script>
     <script src="app/components/map.js"></script>
     <script src="app/components/player.js"></script>
 </head>
