Removendo borda e padding da página

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="app/components/map.js"></script>
     <script src="app/components/player.js"></script>
 </head>
-<body>
+<body style="margin: 0px; padding: 0px;">
     <script src="app/main.js"></script>
 </body>
 </html>
