--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="app/components/gamepad.js"></script>
     <script src="app/components/map.js"></script>
     <script src="app/components/player.js"></script>
+    <script src="app/components/coins.js"></script>
 </head>
 <body style="margin: 0px; padding: 0px;">
     <script src="app/main.js"></script>
