--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Traveler</title>
 
+    <link rel="manifest" href="/manifest.json">
+
     <script src="vendor/phaser/phaser.js"></script>
     <script src="app/states/boot.js"></script>
     <script src="app/states/preload.js"></script>
