Tentando colocar nome do repositório nos links do manifest

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="manifest" href="manifest.json">
     <link rel="manifest" href="the_travaler/manifest.json">
 
+    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="/the_travaler/manifest.json">
+
     <script src="vendor/phaser/phaser.js"></script>
     <script src="app/states/boot.js"></script>
     <script src="app/states/preload.js"></script>
