Organizando service worker

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Traveler</title>
 
+    <script src="lib/register-sw.js"></script>
+
     <link rel="manifest" href="manifest.json">
 
     <script src="vendor/phaser/phaser.js"></script>
