Alterando sintaxe de escrita das classes dos components para habilitar herança e criação de mapas dinámicos

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <script src="app/components/player.js"></script>
     <script src="app/components/coins.js"></script>
     <script src="app/components/greenMushroom.js"></script>
+
+    <script src="app/components/grassland.js"></script>
 </head>
 <body style="margin: 0px; padding: 0px;">
     <script src="app/main.js"></script>
