--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <script src="app/components/player.js"></script>
     <script src="app/components/coins.js"></script>
     <script src="app/components/greenMushroom.js"></script>
+    <script src="app/components/hud.js"></script>
 
     <script src="app/components/grassland.js"></script>
 </head>
