--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
     <!-- INIMIGOS -->
     <script src="app/components/enemies.js"></script>
     <script src="app/components/enemies/bee.js"></script>
+    <script src="app/components/enemies/leafbug.js"></script>
 
     <!-- MAPAS -->
     <script src="app/components/grassland.js"></script>
