Alterando estrutura e sprites para 32x32

--- a/public/index.html
+++ b/public/index.html
@@ -20,19 +20,16 @@
 
     <!-- COMPONENTS PRINCIPAIS -->
     <script src="app/components/gamepad.js"></script>
-    <script src="app/components/map.js"></script>
+    <script src="app/components/maps/map.js"></script>
     <script src="app/components/player.js"></script>
     <script src="app/components/coins.js"></script>
-    <script src="app/components/greenMushroom.js"></script>
     <script src="app/components/hud.js"></script>
 
     <!-- INIMIGOS -->
-    <script src="app/components/enemies.js"></script>
-    <script src="app/components/enemies/bee.js"></script>
-    <script src="app/components/enemies/leafbug.js"></script>
+    <script src="app/components/enemies/enemies.js"></script>
 
     <!-- MAPAS -->
-    <script src="app/components/grassland.js"></script>
+    <script src="app/components/maps/forest.js"></script>
 </head>
 <body style="margin: 0px; padding: 0px;">
     <script src="app/main.js"></script>
