--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <script src="app/components/gamepad.js"></script>
     <script src="app/components/maps/map.js"></script>
     <script src="app/components/player.js"></script>
-    <script src="app/components/coins.js"></script>
+    <script src="app/components/grapes.js"></script>
     <script src="app/components/hud.js"></script>
 
     <!-- INIMIGOS -->
