--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Traveler</title>
 
+    <style>
+    canvas {
+        image-rendering: -moz-crisp-edges;
+        image-rendering: -webkit-crisp-edges;
+        image-rendering: pixelated;
+    }
+    </style>
+
     <!-- PWA -->
     <link rel="manifest" href="manifest.json">
     <script src="lib/register-sw.js"></script>
